@@ -175,7 +175,7 @@ public class SemanticAnalyzer {
                     break;
                 case "constructor":
                     child.setParent(classNode);
-                    analyzeConstructor(child);
+                    analyzeConstructor();
                     break;
                 case "method":
                     child.setParent(classNode);
@@ -190,8 +190,10 @@ public class SemanticAnalyzer {
         }
     }
 
-    private void analyzeConstructor(ASTNode constructorNode) {
+    private void analyzeConstructor() {
         System.out.println("Analyzing constructor");
+
+
     }
 
     private void analyzeMethod(ASTNode methodNode, ClassDefinition classDef) {
@@ -223,7 +225,7 @@ public class SemanticAnalyzer {
                     returnType = analyzeReturnType(child);
                     break;
                 case "argument":
-                    analyzeArgument(child);
+                    analyzeArgument(child, methodNode);
                     break;
                 case "declaration":
                     analyzeVarDeclaration(child);
@@ -334,7 +336,7 @@ public class SemanticAnalyzer {
             throw new RuntimeException("Return statement must have a value");
         }
 
-        ASTNode returnValue = returnNode.getChildren().get(0);
+        ASTNode returnValue = returnNode.getChildren().getFirst();
         String returnValueType = getExpressionType(returnValue);
 
         if (!expectedType.equals(returnValueType)) {
@@ -369,7 +371,7 @@ public class SemanticAnalyzer {
         }
     }
 
-    private void analyzeArgument(ASTNode argumentNode) {
+    private void analyzeArgument(ASTNode argumentNode, ASTNode parent) {
         String argName = argumentNode.getNodeName();
         String argType = argumentNode.getNodeTypeInfo();
 
@@ -377,6 +379,7 @@ public class SemanticAnalyzer {
             throw new RuntimeException("Argument already declared: " + argName);
         }
 
+        argumentNode.setParent(parent);
         symbolTable.put(argName, argType);
         System.out.println("Declared argument: " + argName + " of type " + argType);
     }
@@ -401,7 +404,22 @@ public class SemanticAnalyzer {
         // Analyze initializer if present
         for (ASTNode child : varDeclNode.getChildren()) {
             analyzeExpression(child);
+            String initializerType = child.getNodeType();
+
+            // Check for type compatibility
+            if (varType.equals("String") && !initializerType.equals("MethodCall") && !isTypeCompatible(varType, initializerType)) {
+                throw new RuntimeException("Type mismatch: Cannot assign a value of type " + initializerType +
+                        " to variable " + varName + " of type " + varType);
+            }
         }
+    }
+
+    private boolean isTypeCompatible(String varType, String valueType) {
+        if (varType.equals(valueType)) {
+            return true;
+        }
+
+        return varType.equals("String") && valueType.equals("StringLiteral");
     }
 
     private void analyzeConstructorCall(ASTNode constructorCallNode) {
@@ -476,8 +494,8 @@ public class SemanticAnalyzer {
 
         // Extract method name and determine the target type
         String methodName = methodCallNode.getNodeName();
-        String methodReturnType = null;
-        ASTNode targetNode = methodCallNode.getChildren().get(0);
+        String methodReturnType;
+        ASTNode targetNode = methodCallNode.getChildren().getFirst();
         String targetType = getExpressionType(targetNode);
 
         System.out.println("Target type: " + targetType);
@@ -592,10 +610,10 @@ public class SemanticAnalyzer {
 
         List<ASTNode> args = methodCallNode.getChildren();
         if ("Not".equals(methodName)) {
-            if (args.size() != 2) {
+            if (args.size() != 1) {
                 throw new RuntimeException("Not method expects 1 argument, but got " + args.size());
             }
-            if (!"Boolean".equals(getExpressionType(args.get(1)))) {
+            if (!"Boolean".equals(getExpressionType(args.getFirst()))) {
                 throw new RuntimeException("Not argument must be of type Boolean");
             }
         } else {
@@ -697,10 +715,6 @@ public class SemanticAnalyzer {
         }
     }
 
-    private void analyzeLiteral(ASTNode literalNode) {
-        System.out.println("Analyzing literal: " + literalNode.getNodeName());
-    }
-
     private void analyzeFieldAccess(ASTNode fieldAccessNode) {
         System.out.println("Analyzing field access: " + fieldAccessNode.getNodeName());
         if (!symbolTable.containsKey(fieldAccessNode.getNodeName())) {
@@ -740,10 +754,6 @@ public class SemanticAnalyzer {
         }
 
         // If the parent node is a "Class" node, it could be a class-level variable
-        if (parent != null && parent.getNodeType().equals("class")) {
-            return true;
-        }
-
-        return false;
+        return parent != null && parent.getNodeType().equals("class");
     }
 }
